--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
   <properties>
     <jdk.version>1.8</jdk.version>
+    <jersey.version>2.27</jersey.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <stopwatch.version>1.0-SNAPSHOT</stopwatch.version>
   </properties>
@@ -45,8 +46,8 @@
   <dependencies>
     <dependency>
       <groupId>dk.dbc</groupId>
-      <artifactId>dbc-commons-httpclient</artifactId>
-      <version>1.1-SNAPSHOT</version>
+      <artifactId>httpclient</artifactId>
+      <version>0.1.1</version>
     </dependency>
     <dependency>
       <groupId>javax</groupId>
