--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 
   <artifactId>weekresolver-connector</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.2-SNAPSHOT</version>
   <name>weekresolver-connector</name>
 
   <distributionManagement>
@@ -38,7 +38,6 @@
 
   <properties>
     <jdk.version>1.8</jdk.version>
-    <jersey.version>2.27</jersey.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <stopwatch.version>1.0-SNAPSHOT</stopwatch.version>
   </properties>
@@ -46,8 +45,8 @@
   <dependencies>
     <dependency>
       <groupId>dk.dbc</groupId>
-      <artifactId>httpclient</artifactId>
-      <version>0.1.1</version>
+      <artifactId>dbc-commons-httpclient</artifactId>
+      <version>1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>javax</groupId>
