--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <artifactId>weekresolver-connector</artifactId>
   <version>2.0-SNAPSHOT</version>
   <name>weekresolver-connector</name>
+  <packaging>jar</packaging>
 
   <distributionManagement>
     <repository>
