Create backport branch
to be used untill all dependers has migrated to Jakarta EE-10

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 
   <artifactId>weekresolver-connector</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.3-PRE-EE10</version>
   <name>weekresolver-connector</name>
 
   <distributionManagement>
